main body project section updated. There is still a bug with proejct two section, items are not aligning properly

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
-/* variables declared here - these are the colors for our pages, as well as the font stacks and sizes. */
+/* Variables declared here - these are the colors for our pages, as well as the font stacks and sizes. */
+
 :root {
   --black: #171321;
   --dkblue: #0d314b;
@@ -11,17 +12,23 @@
   --mono: "Oxygen mono", monospace;
   --sans: Oxygen, sans-serif;
 }
+
+
 /* border box model: https://css-tricks.com/box-sizing/ */
+
 html {
   box-sizing: border-box;
 }
+
 *,
 *::before,
 *::after {
   box-sizing: inherit;
 }
 
+
 /* generic styles for the page */
+
 body {
   padding: 0;
   margin: 0;
@@ -30,9 +37,13 @@ body {
   color: var(--white);
   font-size: var(--font-size);
 }
-h1,h2,h3 {
+
+h1,
+h2,
+h3 {
   margin: 0;
 }
+
 a {
   color: var(--magenta);
 }
@@ -41,22 +52,33 @@ a:hover {
   color: var(--hotmag);
   text-decoration: none;
 }
+img {
+width: 100%;
+}
+
 
 /* background color divs */
+
 .section-plum {
   background-color: var(--plum);
 }
-.graident {
-  background: linear-gradient(90deg, rgba(255,23,228,1) 0%, rgba(134,251,251,1) 100%);
+.section-blue {
+  background-color: var(--dkblue);
+}
+
+.gradient {
+  background: linear-gradient(90deg, rgba(255, 23, 228, 1) 0%, rgba(134, 251, 251, 1) 100%);
   height: 2px;
 }
-/* intro styles */
-#intro {
-  /* padding or margin numbers in order from left to right: top, right,bottom,left */
-  padding: 4rem 1rem 10rem 1rem;
-  margin: 0 auto;
-  max-width: 1200px;
 
+
+/* intro styles */
+
+#intro {
+  padding: 4rem 1rem 10rem 1rem;
+  padding-bottom: 10rem;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 #intro p {
@@ -81,26 +103,27 @@ a:hover {
   font-size: 4rem;
 }
 
+
 /* contact section */
 
 #contact {
   width: 400px;
   text-align: center;
   margin: 0 auto;
-  padding: 3rem 0;
-  background-color: var(--plum);
+  padding: 4rem 0;
 }
-
 
 #contact p:last-child {
   margin-top: 3rem;
 }
 
-/* navigation section */
+
+/* navigation */
+
 nav {
   font-family: var(--mono);
   font-size: 80%;
-  padding: 1rem;
+  padding: 4rem 1rem;
 }
 
 nav h1 a {
@@ -117,18 +140,22 @@ nav ul {
   align-items: center;
   gap: 2rem;
 }
+
 nav li:first-child {
   flex-basis: 100%;
   text-align: center;
 }
+
 nav [class*="fa-"] {
   font-size: 150%;
   color: var(--aqua);
 }
+
 nav h1 [class*="fa-"] {
   font-size: 100%;
   color: var(--aqua);
 }
+
 nav a {
   color: white;
   text-decoration: none;
@@ -139,13 +166,14 @@ nav a:hover,
 nav [class*="fa-"]:hover {
   color: var(--magenta);
 }
+
 .button {
   background-color: var(--magenta);
   color: white;
   padding: 0.5rem;
   border-radius: 5px;
-  font-family: var(--mono);
   text-decoration: none;
+  font-family: var(--mono);
 }
 
 .button:hover {
@@ -153,11 +181,56 @@ nav [class*="fa-"]:hover {
   background-color: var(--hotmag);
 }
 
-/* Footer Section */
+/* projects section */
+#projects {
+padding: 4rem 1rem;
+}
+#projects h2 {
+  font-size: 2.5rem;
+  margin-bottom: calc(2.5rem * 1.5);
+}
+#projects h3 {
+  color: var(--aqua);
+}
+
+#projects h4 {
+font-size: 1rem;
+font-family: var(--mono);
+margin: 0;
+}
+.blackbox {
+  padding: 1rem;
+  border-radius: 10px;
+  color: white;
+  background-color: var(--black);
+  font-size: 1rem;
+  line-height: 1.5;
+}
+#projects ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-start;
+  gap: 1rem;
+  font-size: 1rem;
+}
+#projects img {
+  margin: 2rem 0 4rem 0;
+  padding: 1rem;
+  border-left: 1px solid var(--aqua);
+  border-top: 1px solid var(--aqua);
+  border-radius: 25px;
+}
+
+/* footer section */
+
 footer {
   text-align: center;
   padding: 4rem 0;
 }
+
 footer ul {
   list-style-type: none;
   padding: 0;
@@ -165,18 +238,53 @@ footer ul {
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
-  align-items: center;
   gap: 3rem;
   font-size: 3rem;
 }
+/* media queries */
+@media (min-width: 800px) {
+article {
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+}
+#projects img {
+  grid-column: 1/6;
+  grid-row: 1/2;
+}
+.text {
+  grid-column: 6/11;
+  grid-row: 1/2;
+  order: 2;
+  text-align: right;
+}
+#projects ul {
+  justify-content: flex-end;
+}
+
+#projects .reverse .text {
+grid-column: 1/7;
+order: 2;
+text0align: left;
+}
+
+#projects .reverse img {
+grid-column: 6/11;
+grid-row: 1/2;
+}
+
+#projects .reverse ul {
+jusitfy-content: flex-start;
+}
+
+}
 @media (min-width: 850px) {
   nav {
-    max-width: 1200px;
-    margin: 0 auto;
+      max-width: 1200px;
+      margin: 0 auto;
   }
   nav li:first-child {
-    flex-basis: auto;
-    text-align: left;
-    margin-right: auto;
+      flex-basis: auto;
+      text-align: left;
+      margin-right: auto;
   }
 }
